EB-2002-02-25-0: Bugfix:    missing header file

AA-2002-02-25-0: Bugfix:    missing header file, obsolete code removed

EB-2002-02-24-0: Cleanup:   in 'libuti' and 'libgdi'
                            - moved functions from libgdi into libuti
                            - rearranged/modified/created modules
                            - some function names have been changed
                            - added ADOC comments for all not commented 
                              non-static functions

SD-2002-02-22-2: Feature:   Added support to control restart timeout
                            delays using environment variables.

AA-2002-02-22-1: Bugfix:    sec_lib.c memleak fix, reconnect functionality

AA-2002-02-22-0: Cleanup:   insure compile for tcsh
                            LINUX6 crypto lib as libcrypto.a.insure

CR-2002-02-21-0: Testsuite: added scripts/qlogin.sh (used for qmod
                            reschedule test)

CR-2002-02-20-0: Testsuite: cleanup of qmod reschedule test
                 Issue:     #118

EB-2002-02-20-0: Enhancem.: need means for limiting total number of 
                            jobs in a cluster 
                 Issue:     #136
                 Cleanup:   utilib; added ADOC comments

EB-2002-02-19-1: Cleanup:   Moved/deleted some functiones (part 2/2)
                            Added ADOC comments
                 Issue:     #152

EB-2002-02-19-0: Cleanup:   Moved/deleted some functiones (part 1/2)
                 Issue:     #152 

EB-2002-02-18-1: Cleanup:   Integarte common/job.c functions into 
                            libs/gdi/sge_job_jatask.c
                 Issue:     #142

SD-2002-02-18-2: Bugfix:    - Set resource limits after setting the OS
                              job id in builtin_starter.c so that job
                              resource limits will work on the SX-6.

CR-2002-02-18-1: Testsuite: added new check_function in qdel test
                         
