@@ -158,6 +158,8 @@ proc resolve_version { { internal_number -100 } } {
    set versions(SGEEE_5.3beta1)      2
    set versions(SGEEE_5.3beta2)      2
    set versions(SGE_5.3beta2)        2
+   set versions(SGEEE_5.3beta2_1)    2
+   set versions(SGE_5.3beta2_1)      2
 
    
     
