@@ -1,3 +1,5 @@
+AA-2002-02-25-0: Testsuite: security test changes
+
 EB-2002-02-25-0: Bugfix:    missing header file
 
 AA-2002-02-25-0: Bugfix:    missing header file, obsolete code removed
